# my-timer

./: ARCHITECTURE.md  PLAN.md  README.md  THIRD_PARTY_NOTICES.md  main.py  pyproject.toml
pomo/: __init__.py  app.py  config.py  sound.py  timer.py  tui.py
tests/: test_app.py  test_sound.py  test_timer.py  test_tui.py
